package com.kekwy.oodm.hw5;

public class CommonThermometer implements Thermometer {
    @Override
    public double read() {
        return 0;
    }
}
