package com.kekwy.oodm.hw5;

import java.util.LinkedList;
import java.util.Queue;

public class ElectricHeater implements Heater {
    @Override
    public void engage() {
        Queue<Integer> queue = new LinkedList<>();
//        queue.isEmpty()
    }

    @Override
    public void disengage() {

    }
}
