package com.kekwy.oodm.hw5;

public interface Heater {
    void engage();

    void disengage();
}
