package com.kekwy.oodm.hw5;

public interface Thermometer {
    double read();
}
